# plant-id

./: LICENSE  README.md  check_model_structure.py  continue_finetune.py  convert_to_coreML.py  eval.py  finetune.py  pyproject.toml
